[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abr-brush-importer"
version = "1.0.0"
description = "Import Adobe Photoshop .abr brush files into Krita with full dynamics and 17 paint medium modes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kenneth York"},
]
keywords = ["krita", "photoshop", "abr", "brush", "importer", "gbr", "kpp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/kennethyork/abr_brush_importer"
Repository = "https://github.com/kennethyork/abr_brush_importer"
Issues = "https://github.com/kennethyork/abr_brush_importer/issues"

[project.scripts]
abr-import = "standalone:main"

[tool.setuptools]
py-modules = ["standalone"]
packages = ["abr_brush_importer"]

[tool.setuptools.package-data]
abr_brush_importer = ["*.py"]
